@@ -1,3 +1,9 @@
+2008-10-29  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/Makefile.am:
+	* src/gnome-cmd-advrename-dialog.cc:
+	Advanced file rename tool - minor change in dlg mnemonics
+
 2008-10-24  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/Makefile.am:
